@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--Language file translated with Team XBMC Translator-->
 <!--Translator: MrNice_NL-->
-<!--Email: MrNice_NL@whatever.nl-->
-<!--Date of translation: 09/30/2006-->
+<!--Email: MrNice_NL@users.sourceforge.net-->
+<!--Date of translation: 10/31/2006-->
 <!--$Revision$-->
 <!--Based on english strings version 1.343-->
 <strings>
@@ -748,7 +748,7 @@
   <string id="12334">Vergrendeling resetten</string>
   <string id="12335">Vergrendeling verwijderen</string>
   <string id="12337">Nummeriek wachtwoord</string>
-  <string id="12338">Controller knoppencombinatie</string>
+  <string id="12338">Knoppencombinatie</string>
   <string id="12339">Normaal wachtwoord</string>
   <string id="12340">Voer nieuw wachtwoord in</string>
   <string id="12341">Voer nieuw wachtwoord opnieuw in</string>
@@ -1212,6 +1212,7 @@ voor deze visualisatie</string>
   <string id="20006">Playlist map</string>
   <string id="20007">Opnames</string>
   <string id="20009">Gebruik XBMC</string>
+  <string id="20010">Artiest afbeelding</string>
   <string id="20011">Muziek afspeellijst</string>
   <string id="20012">Video  afspeellijst</string>
   <string id="20013">Wil je het spel starten?</string>
@@ -1234,13 +1235,13 @@ voor deze visualisatie</string>
   <string id="20041">Vergrendel programma en scripts secties</string>
   <string id="20042">Vergrendel bestandsbeheer</string>
   <string id="20043">Vergrendelings instellingen</string>
-  <string id="20044">Start opnieuw</string>
+  <string id="20044">Vers</string>
   <string id="20045">Schakel om naar "Master" modus</string>
   <string id="20046">Verlaat "Master" modus</string>
   <string id="20047">Profiel '%s' maken?</string>
-  <string id="20048">Begin met standaard instellingen</string>
-  <string id="20049">Het Beste Beschikbaar</string>
-  <string id="20050">Schakel auto. om tussen 19x9 en 4x3</string>
+  <string id="20048">Begin met verse begin instellingen</string>
+  <string id="20049">Het Best Beschikbaar</string>
+  <string id="20050">Schakel auto. om tussen 16x9 en 4x3</string>
   <string id="20051">Behandel opeenvolgende bestanden als één</string>
   <string id="20052">Waarschuwing</string>
   <string id="20053">Uit "Master" modus</string>
@@ -1250,8 +1251,10 @@ voor deze visualisatie</string>
   <string id="20058">Profiel Toevoegen</string>
   <string id="20059">Vraag info op voor ALLE albums</string>
   <string id="20060">Media info</string>
-  <string id="20061">Verbreek</string>
-  <string id="20064">Kopiër standaard</string>
+  <string id="20061">Afzonderlijk</string>
+  <string id="20062">Gebruik standaard</string>
+  <string id="20063">Gebruik standaard (alleen lezen)</string>
+  <string id="20064">Kopiëren</string>
   <string id="20065">Profiel afbeelding</string>
   <string id="20066">Vergrendelings voorkeuren</string>
   <string id="20067">Wijzig profiel</string>
@@ -1268,7 +1271,7 @@ voor deze visualisatie</string>
   <string id="20078">- geen link ingesteld -</string>
   <string id="20079">Schakel skin animaties in</string>
   <string id="20080">Geen RSS feeds tijdens muziek</string>
-  <string id="20081">Activeer Bookmark knoppen</string>
+  <string id="20081">Activeer "Favorieten" knoppen</string>
   <string id="20082">XLink Kai info zichtbaar</string>
   <string id="20083">Muziek info zichtbaar</string>
   <string id="20084">Weerbericht info zichtbaar</string>
@@ -1289,7 +1292,7 @@ voor deze visualisatie</string>
   <string id="20099">CD-rippen is tijdens het afspelen niet mogenlijk</string>
   <string id="20100">Hoofdkode en Vergrendelingen</string>
   <string id="20101">Ingave van Hoofdkode activeerd "Master" modus</string>
-  <string id="20102">of kopiëren van standard?</string>
+  <string id="20102">of maak een kopie van de huidige instellingen?</string>
   <string id="20103">Wijzigingen opslaan in profiel?</string>
   <string id="20104">Oude instellingen gevonden.</string>
   <string id="20105">Wil je deze gebruiken?</string>
@@ -1313,6 +1316,8 @@ voor deze visualisatie</string>
   <string id="20125">Ingelogd als</string>
   <string id="20126">Uitloggen</string>
   <string id="20128">Ga naar hoofdmap</string>
+  <string id="20129">Weven</string>
+  <string id="20130">Weven (geïnverteerd)</string>
   <string id="20131">Overgaan</string>
   <string id="20132">Herstart Video</string>
   <string id="20133">Wijzig Netwerk Locatie</string>
@@ -1327,6 +1332,13 @@ voor deze visualisatie</string>
   <string id="20142">Gebruikersnaam</string>
   <string id="20143">Voer wachtwoord in voor</string>
   <string id="20144">Uitschakel Timer</string>
+  <string id="20145">Shutdown interval (in minuten)</string>
+  <string id="20146">Gestart, shutdown in %im</string>
+  <string id="20147">Shutdown in 30 minuten</string>
+  <string id="20148">Shutdown in 60 minuten</string>
+  <string id="20149">Shutdown in 120 minuten</string>
+  <string id="20150">Aangepaste Shutdown Timer</string>
+  <string id="20151">Annuleer Shutdown Timer</string>
   <string id="20152">Vergrendel opties voor %s</string>
   <string id="20153">Bladeren...</string>
   <string id="20154">Standaard Informatie</string>
@@ -1344,13 +1356,14 @@ voor deze visualisatie</string>
   <string id="20166">Vergrendelt</string>
   <string id="20167">Bevroren</string>
   <string id="20168">Herstart nodig</string>
-  <string id="20169">?Week of zwak?</string>
+  <string id="20169">Week</string>
   <string id="20170">Regel</string>
   <string id="20171">Windows Netwerk (SMB)</string>
   <string id="20172">XBMSP server</string>
   <string id="20173">FTP server</string>
+  <string id="20174">iTunes muziek share (DAAP)</string>
   <string id="20175">UPnP server</string>
-  <string id="20176">Laat Video Info zien</string>
+  <string id="20176">Video info zichtbaar</string>
   <string id="20177">Klaar</string>
   <string id="20178">Shift</string>
   <string id="20179">Hoofdletters</string>
